--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=borrow-service
 server.port=8083
 
 # Service urls
+service.book.url=http://localhost:8081/
 service.user.url=http://localhost:8082/
 
 # Configuration de la BDD H2
