add lock for concurrency + move classes + remove lombox Slf4j

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ logging.level.org.springdoc=DEBUG
 
 # JWT
 jwt.secret=my-super-secret-key-my-super-secret-key-my-super-secret-key
+
+# Constants
+borrow.book.max-per-user=3
